# EML

./: .gitignore  All Numbers.xlsx  Euro_all_new2.xlsm  README.md  VBA Code.txt  pyproject.toml
config/: default.yaml
docs/: hetzner_runbook.md  legacy_model_review.md  optimisation_objective.md
scripts/: bootstrap_hetzner.sh  run_hetzner_optimisation.sh  run_optimisation.sh
src/euromillions/: __init__.py  backtest.py  candidate_validation.py  cli.py  combinations.py  config.py  db.py  dynamic_params.py  features.py  ingest_excel.py  ingest_web.py  io.py  model_params.py  optimise.py  portfolio_backtest.py  predict.py  rank_history.py  schema.py  scoring.py  topk.py
src/euromillions/models/: __init__.py  baseline_random.py  bayesian_frequency.py  ensemble.py  weighted_statistical.py
src/euromillions/sources/: __init__.py  base.py  beatlottery.py  euro_millions_com.py  national_lottery.py  pedro_api.py
src/euromillions_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_backtest_no_leakage.py  test_candidate_validation.py  test_combinations.py  test_dynamic_params.py  test_features.py  test_ingest_excel.py  test_optimise_resume.py  test_portfolio_backtest.py  test_predict.py  test_rank_history.py  test_sources.py
